Code and structure cleanup.
	new file:   .gitignore
	modified:   src/lepg/ConfigReader/ConfigReader.py
	modified:   src/lepg/DataStores/PreProcessorStore.py
	modified:   src/lepg/DataWindowStatus/DataWindowStatus.py
	deleted:    src/lepg/ExampleFiles/pre-data.txt
	deleted:    src/lepg/FileReader/PreProcDataFileReader.py
	deleted:    src/lepg/FileReader/__init__.py
	modified:   src/lepg/Singleton/Singleton.py
	modified:   src/lepg/Windows/LineEdit.py
	modified:   src/lepg/Windows/SimpleMdiWindow.py
	modified:   src/lepg/Windows/WindowBtnBar.py
	modified:   src/lepg/Windows/WindowHelpBar.py
	modified:   src/lepg/userHelp/hello.html
	modified:   src/lepg/userHelp/index.html
	modified:   src/lepg/userHelp/search/search_index.json
	modified:   src/lepg/userHelp/sitemap.xml
	modified:   src/lepg/userHelp/sitemap.xml.gz
	deleted:    userHelp/builUserHelp.bat
	new file:   userHelp/buildUserHelp.bat
	modified:   userHelp/foliant.yml
	modified:   userHelp/src/hello.md
	modified:   userHelp/src/index.md
	modified:   userHelp/src/preproc/preproc-win.md
	modified:   userHelp/src/preproc/preproc.md
	deleted:    userHelp/userHelp.mkdocs/hello.html
	deleted:    userHelp/userHelp.mkdocs/index.html
	deleted:    userHelp/userHelp.mkdocs/search/search_index.json
	deleted:    userHelp/userHelp.mkdocs/sitemap.xml
	deleted:    userHelp/userHelp.mkdocs/sitemap.xml.gz

--- a/src/lepg/userHelp/hello.html
+++ b/src/lepg/userHelp/hello.html
@@ -97,14 +97,13 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#hello-again">Hello Again</a></li>
+        <li class="main active"><a href="#lepg-description">lepg description</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<h1 id="hello-again">Hello Again</h1>
-<p>This is regular text generated from regular Markdown.</p>
-<p>Foliant doesn’t force any <em>special</em> Markdown flavor.</p></div>
+<h1 id="lepg-description">lepg description</h1>
+<p>Currently used as a placeholder to get the help structure visualized.</p></div>
         </div>
 
         <footer class="col-md-12">
