Rib Holes including data model and fileread done. Dev and user doc updated as well.

--- a/src/userHelp/en/preproc/preproc.html
+++ b/src/userHelp/en/preproc/preproc.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Deutsche Anleitung" href="../../de/deutsch.html" />
+    <link rel="next" title="Basic data" href="../proc/basicData.html" />
     <link rel="prev" title="English Manual" href="../english.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="../proc/basicData.html" title="Basic data"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="../english.html" title="English Manual"
@@ -109,8 +109,8 @@
   <p class="topless"><a href="../english.html"
                         title="previous chapter">English Manual</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../../de/deutsch.html"
-                        title="next chapter">Deutsche Anleitung</a></p>
+  <p class="topless"><a href="../proc/basicData.html"
+                        title="next chapter">Basic data</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -351,7 +351,7 @@ where y1=b1*sqrt(1-((x1*x1)/(a1*a1)))</p>
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="../proc/basicData.html" title="Basic data"
              >next</a> |</li>
         <li class="right" >
           <a href="../english.html" title="English Manual"
