--- a/src/userHelp/de/preproc/preproc.html
+++ b/src/userHelp/de/preproc/preproc.html
@@ -15,6 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
+    <link rel="next" title="Basisdaten" href="../proc/basicData.html" />
     <link rel="prev" title="Deutsche Anleitung" href="../deutsch.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -75,6 +76,9 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="../proc/basicData.html" title="Basisdaten"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="../deutsch.html" title="Deutsche Anleitung"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
@@ -104,6 +108,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="../deutsch.html"
                         title="previous chapter">Deutsche Anleitung</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="../proc/basicData.html"
+                        title="next chapter">Basisdaten</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -343,6 +350,9 @@ where y1=b1*sqrt(1-((x1*x1)/(a1*a1)))</p>
         <li class="right" style="margin-right: 10px">
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="../proc/basicData.html" title="Basisdaten"
+             >next</a> |</li>
         <li class="right" >
           <a href="../deutsch.html" title="Deutsche Anleitung"
              >previous</a> |</li>
