Getting Anchor points window to life.

--- a/src/userHelp/en/proc/airfoils.html
+++ b/src/userHelp/en/proc/airfoils.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Rib holes" href="ribHoles.html" />
+    <link rel="next" title="Anchor Points" href="anchorPoints.html" />
     <link rel="prev" title="Geometry" href="geometry.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="ribHoles.html" title="Rib holes"
+          <a href="anchorPoints.html" title="Anchor Points"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="geometry.html" title="Geometry"
@@ -95,8 +95,8 @@
   <p class="topless"><a href="geometry.html"
                         title="previous chapter">Geometry</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="ribHoles.html"
-                        title="next chapter">Rib holes</a></p>
+  <p class="topless"><a href="anchorPoints.html"
+                        title="next chapter">Anchor Points</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -137,7 +137,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="ribHoles.html" title="Rib holes"
+          <a href="anchorPoints.html" title="Anchor Points"
              >next</a> |</li>
         <li class="right" >
           <a href="geometry.html" title="Geometry"
@@ -152,7 +152,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2020, Stefan Feuz.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
