--- a/src/userHelp/en/proc/ribHoles.html
+++ b/src/userHelp/en/proc/ribHoles.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Deutsche Anleitung" href="../../de/deutsch.html" />
-    <link rel="prev" title="Airfoils" href="airfoils.html" />
+    <link rel="prev" title="Anchor Points" href="anchorPoints.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="../../de/deutsch.html" title="Deutsche Anleitung"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="airfoils.html" title="Airfoils"
+          <a href="anchorPoints.html" title="Anchor Points"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -92,8 +92,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="airfoils.html"
-                        title="previous chapter">Airfoils</a></p>
+  <p class="topless"><a href="anchorPoints.html"
+                        title="previous chapter">Anchor Points</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../../de/deutsch.html"
                         title="next chapter">Deutsche Anleitung</a></p>
@@ -140,7 +140,7 @@
           <a href="../../de/deutsch.html" title="Deutsche Anleitung"
              >next</a> |</li>
         <li class="right" >
-          <a href="airfoils.html" title="Airfoils"
+          <a href="anchorPoints.html" title="Anchor Points"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -152,7 +152,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2020, Stefan Feuz.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
