--- a/src/userHelp/de/proc/ribHoles.html
+++ b/src/userHelp/de/proc/ribHoles.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="prev" title="Zellen" href="airfoils.html" />
+    <link rel="prev" title="Aufhängepunkte" href="anchorPoints.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -75,7 +75,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="airfoils.html" title="Zellen"
+          <a href="anchorPoints.html" title="Aufhängepunkte"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -88,8 +88,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="airfoils.html"
-                        title="previous chapter">Zellen</a></p>
+  <p class="topless"><a href="anchorPoints.html"
+                        title="previous chapter">Aufhängepunkte</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -130,7 +130,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="airfoils.html" title="Zellen"
+          <a href="anchorPoints.html" title="Aufhängepunkte"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -142,7 +142,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2020, Stefan Feuz.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
     </div>
   </body>
 </html>
