--- a/src/userHelp/en/proc/marks.html
+++ b/src/userHelp/en/proc/marks.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Deutsche Anleitung" href="../../de/deutsch.html" />
+    <link rel="next" title="Estimating general Angle of Attack" href="globalAoA.html" />
     <link rel="prev" title="Seewing allowances" href="seewingAllowances.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="globalAoA.html" title="Estimating general Angle of Attack"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="seewingAllowances.html" title="Seewing allowances"
@@ -95,8 +95,8 @@
   <p class="topless"><a href="seewingAllowances.html"
                         title="previous chapter">Seewing allowances</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../../de/deutsch.html"
-                        title="next chapter">Deutsche Anleitung</a></p>
+  <p class="topless"><a href="globalAoA.html"
+                        title="next chapter">Estimating general Angle of Attack</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -137,7 +137,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="globalAoA.html" title="Estimating general Angle of Attack"
              >next</a> |</li>
         <li class="right" >
           <a href="seewingAllowances.html" title="Seewing allowances"
