--- a/src/userHelp/en/proc/globalAoA.html
+++ b/src/userHelp/en/proc/globalAoA.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Deutsche Anleitung" href="../../de/deutsch.html" />
+    <link rel="next" title="Lines" href="lines.html" />
     <link rel="prev" title="Marks (Seewing marcage)" href="marks.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="lines.html" title="Lines"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="marks.html" title="Marks (Seewing marcage)"
@@ -95,8 +95,8 @@
   <p class="topless"><a href="marks.html"
                         title="previous chapter">Marks (Seewing marcage)</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../../de/deutsch.html"
-                        title="next chapter">Deutsche Anleitung</a></p>
+  <p class="topless"><a href="lines.html"
+                        title="next chapter">Lines</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -137,7 +137,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="lines.html" title="Lines"
              >next</a> |</li>
         <li class="right" >
           <a href="marks.html" title="Marks (Seewing marcage)"
