--- a/src/userHelp/de/proc/lines.html
+++ b/src/userHelp/de/proc/lines.html
@@ -15,6 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
+    <link rel="next" title="Bremsleinen" href="brakes.html" />
     <link rel="prev" title="Anstellwinkel" href="globalAoA.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -75,6 +76,9 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="brakes.html" title="Bremsleinen"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="globalAoA.html" title="Anstellwinkel"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
@@ -90,6 +94,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="globalAoA.html"
                         title="previous chapter">Anstellwinkel</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="brakes.html"
+                        title="next chapter">Bremsleinen</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -129,6 +136,9 @@
         <li class="right" style="margin-right: 10px">
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="brakes.html" title="Bremsleinen"
+             >next</a> |</li>
         <li class="right" >
           <a href="globalAoA.html" title="Anstellwinkel"
              >previous</a> |</li>
