--- a/src/userHelp/de/proc/brakes.html
+++ b/src/userHelp/de/proc/brakes.html
@@ -15,6 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
+    <link rel="next" title="Leinenverzweigungen" href="ramification.html" />
     <link rel="prev" title="Leinen" href="lines.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -75,6 +76,9 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="ramification.html" title="Leinenverzweigungen"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="lines.html" title="Leinen"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
@@ -90,6 +94,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="lines.html"
                         title="previous chapter">Leinen</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="ramification.html"
+                        title="next chapter">Leinenverzweigungen</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -130,6 +137,9 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
+          <a href="ramification.html" title="Leinenverzweigungen"
+             >next</a> |</li>
+        <li class="right" >
           <a href="lines.html" title="Leinen"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
@@ -142,7 +152,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2020, Stefan Feuz.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.1.
     </div>
   </body>
 </html>
