--- a/src/userHelp/en/proc/elasticLinesCorr.html
+++ b/src/userHelp/en/proc/elasticLinesCorr.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Deutsche Anleitung" href="../../de/deutsch.html" />
+    <link rel="next" title="DXF Layer names" href="dxfLayerNames.html" />
     <link rel="prev" title="Additional rib points" href="addRibPoints.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="dxfLayerNames.html" title="DXF Layer names"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="addRibPoints.html" title="Additional rib points"
@@ -95,8 +95,8 @@
   <p class="topless"><a href="addRibPoints.html"
                         title="previous chapter">Additional rib points</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../../de/deutsch.html"
-                        title="next chapter">Deutsche Anleitung</a></p>
+  <p class="topless"><a href="dxfLayerNames.html"
+                        title="next chapter">DXF Layer names</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -137,7 +137,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../../de/deutsch.html" title="Deutsche Anleitung"
+          <a href="dxfLayerNames.html" title="DXF Layer names"
              >next</a> |</li>
         <li class="right" >
           <a href="addRibPoints.html" title="Additional rib points"
@@ -152,7 +152,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2020, Stefan Feuz.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.4.1.
     </div>
   </body>
 </html>
