--- a/src/userHelp/de/proc/basicData.html
+++ b/src/userHelp/de/proc/basicData.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Flügelgeometrie" href="geometry.html" />
-    <link rel="prev" title="Preprocessor Parameter" href="../preproc/preproc.html" />
+    <link rel="prev" title="Pre-Prozessor Zellverteilung" href="../preproc/cellDistribution.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="geometry.html" title="Flügelgeometrie"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../preproc/preproc.html" title="Preprocessor Parameter"
+          <a href="../preproc/cellDistribution.html" title="Pre-Prozessor Zellverteilung"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -92,8 +92,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../preproc/preproc.html"
-                        title="previous chapter">Preprocessor Parameter</a></p>
+  <p class="topless"><a href="../preproc/cellDistribution.html"
+                        title="previous chapter">Pre-Prozessor Zellverteilung</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="geometry.html"
                         title="next chapter">Flügelgeometrie</a></p>
@@ -166,7 +166,7 @@ mit den Originalwerten wie in lepg angegeben übernommen wird.</p>
           <a href="geometry.html" title="Flügelgeometrie"
              >next</a> |</li>
         <li class="right" >
-          <a href="../preproc/preproc.html" title="Preprocessor Parameter"
+          <a href="../preproc/cellDistribution.html" title="Pre-Prozessor Zellverteilung"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
