--- a/src/userHelp/en/proc/basicData.html
+++ b/src/userHelp/en/proc/basicData.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Geometry" href="geometry.html" />
-    <link rel="prev" title="Preprocessor parameter" href="../preproc/preproc.html" />
+    <link rel="prev" title="Pre-Processor cells distribution" href="../preproc/cellDistribution.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="geometry.html" title="Geometry"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../preproc/preproc.html" title="Preprocessor parameter"
+          <a href="../preproc/cellDistribution.html" title="Pre-Processor cells distribution"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -92,8 +92,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../preproc/preproc.html"
-                        title="previous chapter">Preprocessor parameter</a></p>
+  <p class="topless"><a href="../preproc/cellDistribution.html"
+                        title="previous chapter">Pre-Processor cells distribution</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="geometry.html"
                         title="next chapter">Geometry</a></p>
@@ -165,7 +165,7 @@ A Wing scale of 1 means that the whole design is created with the original value
           <a href="geometry.html" title="Geometry"
              >next</a> |</li>
         <li class="right" >
-          <a href="../preproc/preproc.html" title="Preprocessor parameter"
+          <a href="../preproc/cellDistribution.html" title="Pre-Processor cells distribution"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
