--- a/src/userHelp/en/preproc/nameLeTeVault.html
+++ b/src/userHelp/en/preproc/nameLeTeVault.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Pre-Processor cells distribution" href="cellDistribution.html" />
-    <link rel="prev" title="Einführung zu lepg" href="../introduction.html" />
+    <link rel="prev" title="Introduction to lepg" href="../introduction.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="cellDistribution.html" title="Pre-Processor cells distribution"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../introduction.html" title="Einführung zu lepg"
+          <a href="../introduction.html" title="Introduction to lepg"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -104,7 +104,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="../introduction.html"
-                        title="previous chapter">Einführung zu lepg</a></p>
+                        title="previous chapter">Introduction to lepg</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="cellDistribution.html"
                         title="next chapter">Pre-Processor cells distribution</a></p>
@@ -264,7 +264,7 @@ where y1=b1*sqrt(1-((x1*x1)/(a1*a1)))</p>
           <a href="cellDistribution.html" title="Pre-Processor cells distribution"
              >next</a> |</li>
         <li class="right" >
-          <a href="../introduction.html" title="Einführung zu lepg"
+          <a href="../introduction.html" title="Introduction to lepg"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
