Improved user help and translation for lines and brake lines.

--- a/src/userHelp/de/proc/ribHoles.html
+++ b/src/userHelp/de/proc/ribHoles.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Segelspannung" href="skinTension.html" />
+    <link rel="next" title="Tuchspannung" href="skinTension.html" />
     <link rel="prev" title="Aufhängepunkte" href="anchorPoints.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="skinTension.html" title="Segelspannung"
+          <a href="skinTension.html" title="Tuchspannung"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="anchorPoints.html" title="Aufhängepunkte"
@@ -120,7 +120,7 @@
                         title="previous chapter">Aufhängepunkte</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="skinTension.html"
-                        title="next chapter">Segelspannung</a></p>
+                        title="next chapter">Tuchspannung</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -247,7 +247,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="skinTension.html" title="Segelspannung"
+          <a href="skinTension.html" title="Tuchspannung"
              >next</a> |</li>
         <li class="right" >
           <a href="anchorPoints.html" title="Aufhängepunkte"
