User help improvements.

--- a/src/userHelp/de/proc/brakes.html
+++ b/src/userHelp/de/proc/brakes.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Leinenverzweigungen" href="ramification.html" />
+    <link rel="next" title="Höhe Leinenebenen" href="ramification.html" />
     <link rel="prev" title="Leinen" href="lines.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="ramification.html" title="Leinenverzweigungen"
+          <a href="ramification.html" title="Höhe Leinenebenen"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="lines.html" title="Leinen"
@@ -110,7 +110,7 @@
                         title="previous chapter">Leinen</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="ramification.html"
-                        title="next chapter">Leinenverzweigungen</a></p>
+                        title="next chapter">Höhe Leinenebenen</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -202,7 +202,7 @@ Dazu definierts Du die Rippennummer mit einer Kommastelle.</p>
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="ramification.html" title="Leinenverzweigungen"
+          <a href="ramification.html" title="Höhe Leinenebenen"
              >next</a> |</li>
         <li class="right" >
           <a href="lines.html" title="Leinen"
