--- a/src/userHelp/en/proc/airfoils.html
+++ b/src/userHelp/en/proc/airfoils.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Anchor Points" href="anchorPoints.html" />
+    <link rel="next" title="Anchor points" href="anchorPoints.html" />
     <link rel="prev" title="Geometry" href="geometry.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="anchorPoints.html" title="Anchor Points"
+          <a href="anchorPoints.html" title="Anchor points"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="geometry.html" title="Geometry"
@@ -115,7 +115,7 @@
                         title="previous chapter">Geometry</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="anchorPoints.html"
-                        title="next chapter">Anchor Points</a></p>
+                        title="next chapter">Anchor points</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -224,7 +224,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="anchorPoints.html" title="Anchor Points"
+          <a href="anchorPoints.html" title="Anchor points"
              >next</a> |</li>
         <li class="right" >
           <a href="geometry.html" title="Geometry"
