--- a/src/userHelp/de/proc/procOutput.html
+++ b/src/userHelp/de/proc/procOutput.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Spracheinstellungen" href="../setup/language.html" />
-    <link rel="prev" title="Segelspannung - neu" href="newSkinTension.html" />
+    <link rel="prev" title="Tuchspannung - neu" href="newSkinTension.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="../setup/language.html" title="Spracheinstellungen"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="newSkinTension.html" title="Segelspannung - neu"
+          <a href="newSkinTension.html" title="Tuchspannung - neu"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -93,7 +93,7 @@
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
   <p class="topless"><a href="newSkinTension.html"
-                        title="previous chapter">Segelspannung - neu</a></p>
+                        title="previous chapter">Tuchspannung - neu</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../setup/language.html"
                         title="next chapter">Spracheinstellungen</a></p>
@@ -172,7 +172,7 @@
           <a href="../setup/language.html" title="Spracheinstellungen"
              >next</a> |</li>
         <li class="right" >
-          <a href="newSkinTension.html" title="Segelspannung - neu"
+          <a href="newSkinTension.html" title="Tuchspannung - neu"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
