--- a/src/userHelp/de/proc/ramification.html
+++ b/src/userHelp/de/proc/ramification.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="HV VH Rippen" href="hVvHribs.html" />
+    <link rel="next" title="Diagonalrippen" href="hVvHribs.html" />
     <link rel="prev" title="Bremsleinen" href="brakes.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="hVvHribs.html" title="HV VH Rippen"
+          <a href="hVvHribs.html" title="Diagonalrippen"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="brakes.html" title="Bremsleinen"
@@ -121,7 +121,7 @@
                         title="previous chapter">Bremsleinen</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="hVvHribs.html"
-                        title="next chapter">HV VH Rippen</a></p>
+                        title="next chapter">Diagonalrippen</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -214,7 +214,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="hVvHribs.html" title="HV VH Rippen"
+          <a href="hVvHribs.html" title="Diagonalrippen"
              >next</a> |</li>
         <li class="right" >
           <a href="brakes.html" title="Bremsleinen"
