--- a/src/userHelp/de/proc/seewingAllowances.html
+++ b/src/userHelp/de/proc/seewingAllowances.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Nahtmarkierungen" href="marks.html" />
-    <link rel="prev" title="Segelspannung" href="skinTension.html" />
+    <link rel="prev" title="Tuchspannung" href="skinTension.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="marks.html" title="Nahtmarkierungen"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="skinTension.html" title="Segelspannung"
+          <a href="skinTension.html" title="Tuchspannung"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -101,7 +101,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="skinTension.html"
-                        title="previous chapter">Segelspannung</a></p>
+                        title="previous chapter">Tuchspannung</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="marks.html"
                         title="next chapter">Nahtmarkierungen</a></p>
@@ -194,7 +194,7 @@
           <a href="marks.html" title="Nahtmarkierungen"
              >next</a> |</li>
         <li class="right" >
-          <a href="skinTension.html" title="Segelspannung"
+          <a href="skinTension.html" title="Tuchspannung"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
