--- a/src/userHelp/en/proc/noseMylars.html
+++ b/src/userHelp/en/proc/noseMylars.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="2D DXF Options" href="twoDDxf.html" />
+    <link rel="next" title="2D DXF options" href="twoDDxf.html" />
     <link rel="prev" title="Joncs definition" href="joncsDefinition.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="twoDDxf.html" title="2D DXF Options"
+          <a href="twoDDxf.html" title="2D DXF options"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="joncsDefinition.html" title="Joncs definition"
@@ -105,7 +105,7 @@
                         title="previous chapter">Joncs definition</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="twoDDxf.html"
-                        title="next chapter">2D DXF Options</a></p>
+                        title="next chapter">2D DXF options</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -183,7 +183,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="twoDDxf.html" title="2D DXF Options"
+          <a href="twoDDxf.html" title="2D DXF options"
              >next</a> |</li>
         <li class="right" >
           <a href="joncsDefinition.html" title="Joncs definition"
