Labels fixed and user help improvements.

--- a/src/userHelp/de/proc/threeDDxf.html
+++ b/src/userHelp/de/proc/threeDDxf.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Nasenventile" href="glueVent.html" />
+    <link rel="next" title="Einlassöffnungen" href="glueVent.html" />
     <link rel="prev" title="2D DXF Optionen" href="twoDDxf.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="glueVent.html" title="Nasenventile"
+          <a href="glueVent.html" title="Einlassöffnungen"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="twoDDxf.html" title="2D DXF Optionen"
@@ -104,7 +104,7 @@
                         title="previous chapter">2D DXF Optionen</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="glueVent.html"
-                        title="next chapter">Nasenventile</a></p>
+                        title="next chapter">Einlassöffnungen</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -178,7 +178,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="glueVent.html" title="Nasenventile"
+          <a href="glueVent.html" title="Einlassöffnungen"
              >next</a> |</li>
         <li class="right" >
           <a href="twoDDxf.html" title="2D DXF Optionen"
