Completed user help in english and german.

--- a/src/userHelp/de/proc/joncsDefinition.html
+++ b/src/userHelp/de/proc/joncsDefinition.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Nasenversteifung" href="noseMylars.html" />
+    <link rel="next" title="Versteifungen Eintrittskante" href="noseMylars.html" />
     <link rel="prev" title="Planmarken" href="marksTypes.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="noseMylars.html" title="Nasenversteifung"
+          <a href="noseMylars.html" title="Versteifungen Eintrittskante"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="marksTypes.html" title="Planmarken"
@@ -107,7 +107,7 @@
                         title="previous chapter">Planmarken</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="noseMylars.html"
-                        title="next chapter">Nasenversteifung</a></p>
+                        title="next chapter">Versteifungen Eintrittskante</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -307,7 +307,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="noseMylars.html" title="Nasenversteifung"
+          <a href="noseMylars.html" title="Versteifungen Eintrittskante"
              >next</a> |</li>
         <li class="right" >
           <a href="marksTypes.html" title="Planmarken"
