--- a/src/userHelp/de/proc/newSkinTension.html
+++ b/src/userHelp/de/proc/newSkinTension.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Pre- und Processor Statusfenster" href="procOutput.html" />
-    <link rel="prev" title="Profildicke" href="airfoilThickness.html" />
+    <link rel="prev" title="Flügeldicke" href="airfoilThickness.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="procOutput.html" title="Pre- und Processor Statusfenster"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="airfoilThickness.html" title="Profildicke"
+          <a href="airfoilThickness.html" title="Flügeldicke"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -111,7 +111,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="airfoilThickness.html"
-                        title="previous chapter">Profildicke</a></p>
+                        title="previous chapter">Flügeldicke</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="procOutput.html"
                         title="next chapter">Pre- und Processor Statusfenster</a></p>
@@ -233,7 +233,7 @@ Tuchspannung - neu ist ein optionaler Abschnitt. Wenn er nicht verwendet werden 
           <a href="procOutput.html" title="Pre- und Processor Statusfenster"
              >next</a> |</li>
         <li class="right" >
-          <a href="airfoilThickness.html" title="Profildicke"
+          <a href="airfoilThickness.html" title="Flügeldicke"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
