Glue vents are fully compatible with 3.17 now.

--- a/src/userHelp/en/proc/basicData.html
+++ b/src/userHelp/en/proc/basicData.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Geometry" href="geometry.html" />
-    <link rel="prev" title="Pre-Processor cells distribution" href="../preproc/cell_distribution.html" />
+    <link rel="prev" title="Wing outline" href="../preproc/wing_outline.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="geometry.html" title="Geometry"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../preproc/cell_distribution.html" title="Pre-Processor cells distribution"
+          <a href="../preproc/wing_outline.html" title="Wing outline"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -113,8 +113,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../preproc/cell_distribution.html"
-                        title="previous chapter">Pre-Processor cells distribution</a></p>
+  <p class="topless"><a href="../preproc/wing_outline.html"
+                        title="previous chapter">Wing outline</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="geometry.html"
                         title="next chapter">Geometry</a></p>
@@ -234,7 +234,7 @@ A Wing scale of 1 means that the whole design is created with the original value
           <a href="geometry.html" title="Geometry"
              >next</a> |</li>
         <li class="right" >
-          <a href="../preproc/cell_distribution.html" title="Pre-Processor cells distribution"
+          <a href="../preproc/wing_outline.html" title="Wing outline"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
