--- a/src/userHelp/de/proc/basicData.html
+++ b/src/userHelp/de/proc/basicData.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Flügelgeometrie" href="geometry.html" />
-    <link rel="prev" title="Pre-Prozessor Zellverteilung" href="../preproc/cell_distribution.html" />
+    <link rel="prev" title="Flügel Kontur" href="../preproc/wing_outline.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="geometry.html" title="Flügelgeometrie"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../preproc/cell_distribution.html" title="Pre-Prozessor Zellverteilung"
+          <a href="../preproc/wing_outline.html" title="Flügel Kontur"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -113,8 +113,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../preproc/cell_distribution.html"
-                        title="previous chapter">Pre-Prozessor Zellverteilung</a></p>
+  <p class="topless"><a href="../preproc/wing_outline.html"
+                        title="previous chapter">Flügel Kontur</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="geometry.html"
                         title="next chapter">Flügelgeometrie</a></p>
@@ -235,7 +235,7 @@ mit den Originalwerten wie in lepg angegeben übernommen wird.</p>
           <a href="geometry.html" title="Flügelgeometrie"
              >next</a> |</li>
         <li class="right" >
-          <a href="../preproc/cell_distribution.html" title="Pre-Prozessor Zellverteilung"
+          <a href="../preproc/wing_outline.html" title="Flügel Kontur"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
