--- a/src/userHelp/en/preproc/cell_distribution.html
+++ b/src/userHelp/en/preproc/cell_distribution.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Basic data" href="../proc/basicData.html" />
+    <link rel="next" title="Wing outline" href="wing_outline.html" />
     <link rel="prev" title="Pre-Processor data" href="name_le_te_vault.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../proc/basicData.html" title="Basic data"
+          <a href="wing_outline.html" title="Wing outline"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="name_le_te_vault.html" title="Pre-Processor data"
@@ -106,8 +106,8 @@
   <p class="topless"><a href="name_le_te_vault.html"
                         title="previous chapter">Pre-Processor data</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../proc/basicData.html"
-                        title="next chapter">Basic data</a></p>
+  <p class="topless"><a href="wing_outline.html"
+                        title="next chapter">Wing outline</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -252,7 +252,7 @@ have then 9 cells which makes a total of 18.:</p>
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../proc/basicData.html" title="Basic data"
+          <a href="wing_outline.html" title="Wing outline"
              >next</a> |</li>
         <li class="right" >
           <a href="name_le_te_vault.html" title="Pre-Processor data"
