--- a/src/userHelp/en/proc/newSkinTension.html
+++ b/src/userHelp/en/proc/newSkinTension.html
@@ -15,7 +15,7 @@
     <script src="../../_static/doctools.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Pre- and processor output" href="procOutput.html" />
+    <link rel="next" title="Parts separation" href="partsSeparation.html" />
     <link rel="prev" title="Airfoil thickness" href="airfoilThickness.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
@@ -76,7 +76,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="procOutput.html" title="Pre- and processor output"
+          <a href="partsSeparation.html" title="Parts separation"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="airfoilThickness.html" title="Airfoil thickness"
@@ -113,8 +113,8 @@
   <p class="topless"><a href="airfoilThickness.html"
                         title="previous chapter">Airfoil thickness</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="procOutput.html"
-                        title="next chapter">Pre- and processor output</a></p>
+  <p class="topless"><a href="partsSeparation.html"
+                        title="next chapter">Parts separation</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3 id="searchlabel">Quick search</h3>
     <div class="searchformwrapper">
@@ -229,7 +229,7 @@ New skin tension does follow the same definitions as the original skin tension w
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="procOutput.html" title="Pre- and processor output"
+          <a href="partsSeparation.html" title="Parts separation"
              >next</a> |</li>
         <li class="right" >
           <a href="airfoilThickness.html" title="Airfoil thickness"
