--- a/src/userHelp/en/proc/procOutput.html
+++ b/src/userHelp/en/proc/procOutput.html
@@ -16,7 +16,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Language configuration" href="../setup/language.html" />
-    <link rel="prev" title="New skin tension" href="newSkinTension.html" />
+    <link rel="prev" title="Parts separation" href="partsSeparation.html" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700'
           rel='stylesheet' type='text/css' />
  
@@ -79,7 +79,7 @@
           <a href="../setup/language.html" title="Language configuration"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="newSkinTension.html" title="New skin tension"
+          <a href="partsSeparation.html" title="Parts separation"
              accesskey="P">previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
@@ -92,8 +92,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="newSkinTension.html"
-                        title="previous chapter">New skin tension</a></p>
+  <p class="topless"><a href="partsSeparation.html"
+                        title="previous chapter">Parts separation</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../setup/language.html"
                         title="next chapter">Language configuration</a></p>
@@ -172,7 +172,7 @@
           <a href="../setup/language.html" title="Language configuration"
              >next</a> |</li>
         <li class="right" >
-          <a href="newSkinTension.html" title="New skin tension"
+          <a href="partsSeparation.html" title="Parts separation"
              >previous</a> |</li>
         <li><a href="../../index.html">Home</a>&#160;|</li>
         <li><a href="../../contents.html">Documentation</a> &#187;</li>
